products impl
